# paasta_2026_denovo

./: .gitignore  README.md  head_100.parquet  head_100_winnow.parquet  paasta_denovo.ipynb  pyproject.toml
sample/: subset_100.mgf  subset_100.parquet
